feature: - added CustomersTab - implented CustomersTab in MainForm test: - CustomerTab and ItemsTab logic

--- a/src/ObjectOrientedPractics/ObjectOrientedPractics/View/MainFOrm.resx
+++ b/src/ObjectOrientedPractics/ObjectOrientedPractics/View/MainFOrm.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAABFTAAARUwAAAAAAAAAA
+        AAAAAAAAAAAAAJR/ZACUf2QAlH9kAJR/ZACUf2QAlH9kAJR/ZBqUf2RSlH9kjJR/ZLSUf2Q3k3tjALPy
+        dQCnxG6Gp8RuaavTcACPbmIAlH9kS5R/ZKqUf2RwlH9kOJR/ZAiUf2QAlH9kAJR/ZACUf2QAlH9kAJR/
+        ZAAAAAAAAAAAAAAAAAAAAAAAlH5kAJR/ZAGUf2QAlH9kFpR/ZGmUf2S8lH9k8ZR/ZPyUf2T/lH9kkZaH
+        ZQCjtGwPp8RupqfEbv+nxG7/p8RuhZiPZgKUf2QAlH9kvZR/ZP+Uf2T6lH9k3pR/ZJyUf2RIlH9kB5R/
+        ZACUf2QAk4BkAAAAAAAAAAAAAAAAAAAAAACUf2QClH9kAJR/ZCGUf2TvlH9k/5R/ZP6Uf2T/lH9k+pR/
+        ZP+UgWSbnqJpAKbBblqnxG7/p8Ru+afEbv2nxG7/psJuLaCqagCUgGTFlH9k/5R/ZPyUf2T/lH9k/ZR/
+        ZP+Uf2TMlH9lBpR/ZACUf2QBAAAAAAAAAAAAAAAAAAAAAJR/ZAKUf2QAlH9kLZR/ZP+Uf2T7lH9k+5R/
+        ZP6Uf2T8lH9k/5SAZMyhrWsAp8NuL6fEbv+nxG7+p8Ru/6fEbuax6HMJj29iD5R/ZO2Uf2T/lH9k/pR/
+        ZP2Uf2T6lH9k/5R/ZOmUf2QNlH9kAJR/ZAEAAAAAAAAAAAAAAAAAAAAAlH9kApR/ZACUf2QslH9k/5R/
+        ZP+Uf2T/lH9k/5R/ZP6Uf2T/lH9k7ZBvYg+x6XMIp8Ru6KfEbv+nxG7/p8NuxJycaACVgWQ4lH9k/5R/
+        ZP6Uf2T/lH9k/5R/ZP6Uf2T/lH9k55R/ZAyUf2QAlH9kAQAAAAAAAAAAAAAAAAAAAACUf2QClH9kAJR/
+        ZC2Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/ZP6Uf2T/lYFkN5ybaACnw27Ep8Ru/6fEbv+nwm6XnqJpAJWC
+        ZGeUf2T/lH9k+5R/ZP+Uf2T/lH9k/pR/ZP+Uf2TolH9kDZR/ZACUf2QBAAAAAAAAAAAAAAAAAAAAAJR/
+        ZAKUf2QAlH9kLZR/ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k+5R/ZP+VgmRmnqJpAKfCbpinxG7/p8Ru/6bB
+        bmadoWkAlIFkmJR/ZP+Uf2T7lH9k/5R/ZP+Uf2T+lH9k/5R/ZOiUf2QNlH9kAJR/ZAEAAAAAAAAAAAAA
+        AAAAAAAAlH9kApR/ZACUf2QtlH9k/5R/ZP+Uf2T/lH9k/5R/ZP+Uf2T7lH9k/5SBZJedoWkApsFuaKfE
+        bv+nxG7/psJuN5+oagCUgGTFlH9k/5R/ZPyUf2T/lH9k/5R/ZP6Uf2T/lH9k6JR/ZA2Uf2QAlH9kAQAA
+        AAAAAAAAAAAAAAAAAACUf2QClH9kAJR/ZCyUf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/ZPyUf2T/lIBkw5+o
+        agCmwm44p8Ru/6fEbuys1nEOjGFgCpR/ZOmUf2T/lH9k/pR/ZP+Uf2T/lH9k/pR/ZP+Uf2TolH9kDJR/
+        ZACUf2QBAAAAAAAAAAAAAAAAAAAAAJR/ZAKUf2QAlH9kLJR/ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/pR/
+        ZP+Uf2TniFReCKvUcA6nxG75p8NuzZuaaACUgGQylH9k/5R/ZP+Uf2T/lH9k/5R/ZP+Uf2T+lH9k/5R/
+        ZOiUf2QNlH9kAJR/ZAEAAAAAAAAAAAAAAAAAAAAAlH9kApR/ZACUf2QnlH9k/ZR/ZP+Uf2T+lH9k/5R/
+        ZP+Uf2T/lH9k/pR/ZP2UgGQtnZ5oAKfDbt+nw26pnqRpAJWCZF+Uf2T/lH9k+5R/ZP+Uf2T/lH9k/5R/
+        ZP6Uf2T/lH9k4pR/ZAmUf2QAlH9kAQAAAAAAAAAAAAAAAAAAAACUf2QBlH9kAJR/ZA6Uf2TmlH9k/5R/
+        ZP6Uf2T/lH9k/pR/ZPyUf2T7lH9k/5WBZGCeo2kApsJup6bBbnaeo2kAlIFklpR/ZP+Uf2T6lH9k/JR/
+        ZP+Uf2T/lH9k/JR/ZP+Uf2TBlH9kAJR/ZAGUf2QAAAAAAAAAAAAAAAAAAAAAAJR/ZACUf2QDlH9kAJR/
+        ZJaUf2T/lH9k+ZR/ZP2Uf2T9lH9k/5R/ZOeUf2SdlH9kMJaIZQCoxm8Hp8BuBZeJZQCUf2RPlH9ku5R/
+        ZPiUf2T/lH9k/JR/ZP2Uf2T5lH9k/5R/ZGSUf2QAlH9kA5R/ZAAAAAAAAAAAAAAAAAAAAAAAlH9kAJR/
+        ZAGUf2QAlH9kE5R/ZNSUf2T/lH9k/5R/ZPWUf2R+lH9kDpR/ZACRdGIAmI1mApF0YgmRdmMH////AJN8
+        ZAGUf2QAlH9kKZR/ZLCUf2T/lH9k/JR/ZP+Uf2SnlH9kAJR/ZAGUf2QAlH9kAAAAAAAAAAAAAAAAAAAA
+        AACUf2QAlH9kAJR/ZAGUf2QAlH9kFJR/ZLeUf2TelH9kLpR/ZACUf2QFlH9kT5R/ZKaUf2TUlH9k55R/
+        ZOOUf2TIlH9kjpR/ZC6Uf2QAlH9kAJR/ZGiUf2T2lH9kg5R/ZAKUf2QBlH9kAJR/ZACUf2QAAAAAAAAA
+        AAAAAAAAAAAAAJN+ZQCUf2QAlH9kAJR/ZAGVfmcAlH9kBZR/ZBCUf2QAlH9kMZR/ZMuUf2T/lH9k/pR/
+        ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/ZR/ZJmUf2QNlH9kAJR/ZBKUgGUAlH9kApR/ZAGUf2QAlH9kAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAJR/ZACUf2QAlH9kAJR/ZAKUf2QFlH9kAJR/ZEqUf2T2lH9k/5R/
+        ZPyUf2T7lH9k/ZR/ZP6Uf2T9lH9k/JR/ZPuUf2T8lH9k/5R/ZMuUf2QVlH9kAJR/ZASUf2QBlH9kAJR/
+        ZACUf2QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJV/ZACUf2QAlH9kApR/ZACUf2QwlH9k9JR/
+        ZP+Uf2T7lH9k/5R/ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/ZP6Uf2T5lH9k/5R/ZL2Uf2QDkoFkAJR/
+        ZACUf2QAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAlH9kAJR/ZACUf2QAk39kAJR/
+        ZMKUf2T/lH9k+5R/ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/ZP+Uf2T6lH9k/5R/
+        ZHOUf2QAlH9kA5R/ZAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACUf2QAlH9kA5R/
+        ZACUf2RLlH9k/5R/ZPyUf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/
+        ZP2Uf2T/lH9k4JR/ZAyUf2QAlH9kAZR/ZAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJR/
+        ZACUf2QDlH9kAJR/ZJ6Uf2T/lH9k+5R/ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/
+        ZP+Uf2T/lH9k/5R/ZPyUf2T/lH9kS5R/ZACUf2QDAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAlH9kAJN+YwCUf2QAlH9kz5R/ZP+Uf2T9lH9k/5R/ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/
+        ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k+5R/ZP+Uf2R/lH9kAJR/ZASUf2QAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAACUf2QBlH9kAJR/ZAmUf2TklH9k/5R/ZP2Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/
+        ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/ZP+Uf2T7lH9k/5R/ZJmUf2QAlH9kBJR/ZAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAJR/ZAGUf2QAlH9kCJR/ZOGUf2T/lH9k/ZR/ZP+Uf2T/lH9k/5R/
+        ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/ZPuUf2T/lH9klpR/ZACUf2QElH9kAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAlH9kAJR/ZAGUf2QAlH9kx5R/ZP+Uf2T9lH9k/5R/
+        ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k+5R/ZP+Uf2R2lH9kAJR/
+        ZASUf2UAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACUf2QAlH9kBJR/ZACUf2SOlH9k/5R/
+        ZPuUf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/ZP+Uf2T9lH9k/5R/
+        ZD2Uf2QAlH9kA5SAZAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJR/ZACUf2QClH9kAJR/
+        ZDeUf2T/lH9k/ZR/ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/ZR/
+        ZP+Uf2TPlH9lApR/ZACUf2QBlH9lAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAlH9kAJR/
+        ZACUf2QClH9kAJR/ZKWUf2T/lH9k+pR/ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/
+        ZP+Uf2T7lH9k/5R/ZFaUf2QAlH9kA5R/ZAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AACUfmQAlH9kAJR/ZAGUf2QAlH9kFpR/ZNuUf2T/lH9k+pR/ZP6Uf2T/lH9k/5R/ZP+Uf2T/lH9k/5R/
+        ZP+Uf2T9lH9k+ZR/ZP+Uf2SYlH9kAJR/ZAKUf2QAlH9kAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAACUf2QAlH9kAJR/ZAKUf2QAlH9kJJR/ZNmUf2T/lH9k/ZR/ZPyUf2T8lH9k/ZR/
+        ZP2Uf2T8lH9k/ZR/ZP2Uf2T/lH9kn5OAZAGUf2QBlH9kAJR/ZACUf2QAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAJR/ZACUf2QAlH9kAJR/ZAKUf2QAlH9kD5R/ZJGUf2T1lH9k/5R/
+        ZP6Uf2T/lH9k/5R/ZP6Uf2T/lH9k4JR/ZF2Uf2QAlH9kApR/ZAGUf2QAlH9kAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAJR/ZACUf2QAlH9kAJR/ZAKUf2QClH9kAJR/
+        ZCCUf2R0lH9kr5R/ZMeUf2TClH9kn5R/ZFiUf2QMlH9kAJR/ZAOUf2QBlH9kAJR/ZACSfmQAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA0QZgi8gIEBfQCBAL0AgAC9AAIAvQBCAL0AQgC9AEIAvQBAAL0ABAC9AC
+        QAvQAkATyAJAE8gIECPUIAwH6EACl/SAAS/5AAAf8QAAn/IAAF/yAABf8gAAX/QAAE/0AABP8gAAX/IA
+        AF/yAABf+QAAn/kAAR/6gAA//UAEv/6QCX8=
+</value>
+  </data>
 </root>
